--- a/test0.ipynb
+++ b/test0.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/paramiko/transport.py:236: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
-      "  \"class\": algorithms.Blowfish,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import librosa\n",
@@ -21,11 +12,19 @@
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "import time\n",
-    "import random"
+    "import random\n",
+    "\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "import datetime\n",
+    "from matplotlib import pyplot as plt\n",
+    "from pretty_confusion_matrix import pp_matrix_from_data"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,11 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "DATASET_PATH = \"samples\"\n",
+    "TRAIN_VAL_SPLIT = 0.1\n",
+    "\n",
     "samples = os.listdir(DATASET_PATH)\n",
     "random.shuffle(samples)\n",
     "\n",
@@ -48,7 +49,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,83 +85,149 @@
     "        sig_mfcc = np.pad(sig_mfcc, [(0, 0), (0, SIG_LENGTH - sig_mfcc.shape[1])], mode='symmetric')\n",
     "    elif sig_mfcc.shape[1] > SIG_LENGTH:\n",
     "        sig_mfcc = sig_mfcc[:, :SIG_LENGTH]\n",
-    "\n",
+    "    \n",
+    "    sig_mfcc = sig_mfcc.transpose()\n",
     "    mfccs.append(sig_mfcc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_94703/2237551022.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmfccs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmfccs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0memotions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memotions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmfccs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mfccs = np.array(mfccs)\n",
     "emotions = np.array(emotions)\n",
     "\n",
-    "print(mfccs.shape)\n",
-    "print(emotions.shape)"
+    "ds_len = mfccs.shape[0]\n",
+    "split_point = int(ds_len*(1-TRAIN_VAL_SPLIT))\n",
+    "\n",
+    "avg = mfccs.mean()\n",
+    "std = mfccs.std()\n",
+    "\n",
+    "mfccs = (mfccs - avg) / std # normalization\n",
+    "\n",
+    "# mfccs = np.expand_dims(mfccs, axis=-1)\n",
+    "\n",
+    "train_x = mfccs[:split_point]\n",
+    "train_y = emotions[:split_point]\n",
+    "\n",
+    "val_x = mfccs[split_point:]\n",
+    "val_y = emotions[split_point:]\n",
+    "\n",
+    "\n",
+    "# print(mfccs.mean(), mfccs.std())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-01-16 21:04:56.925052: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-01-16 21:04:57.228695: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2023-01-16 21:04:57.228746: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "2023-01-16 21:04:59.430911: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-01-16 21:04:59.431317: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-01-16 21:04:59.431328: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np\n",
-    "import datetime\n",
-    "from matplotlib import pyplot as plt\n",
-    "from pretty_confusion_matrix import pp_matrix_from_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+      "Epoch 1/50\n",
+      "21/21 [==============================] - 4s 130ms/step - loss: 1.5505 - accuracy: 0.2246 - val_loss: 1.4939 - val_accuracy: 0.2215\n",
+      "Epoch 2/50\n",
+      "21/21 [==============================] - 2s 116ms/step - loss: 1.4049 - accuracy: 0.2664 - val_loss: 1.3808 - val_accuracy: 0.2953\n",
+      "Epoch 3/50\n",
+      "21/21 [==============================] - 3s 122ms/step - loss: 1.3986 - accuracy: 0.2552 - val_loss: 1.4030 - val_accuracy: 0.2752\n",
+      "Epoch 4/50\n",
+      "21/21 [==============================] - 2s 108ms/step - loss: 1.3783 - accuracy: 0.2985 - val_loss: 1.3770 - val_accuracy: 0.3154\n",
+      "Epoch 5/50\n",
+      "21/21 [==============================] - 3s 126ms/step - loss: 1.3919 - accuracy: 0.2806 - val_loss: 1.3566 - val_accuracy: 0.2752\n",
+      "Epoch 6/50\n",
+      "21/21 [==============================] - 2s 118ms/step - loss: 1.3662 - accuracy: 0.3060 - val_loss: 1.3561 - val_accuracy: 0.3624\n",
+      "Epoch 7/50\n",
+      "21/21 [==============================] - 2s 111ms/step - loss: 1.3486 - accuracy: 0.3306 - val_loss: 1.3467 - val_accuracy: 0.3356\n",
+      "Epoch 8/50\n",
+      "21/21 [==============================] - 2s 119ms/step - loss: 1.3251 - accuracy: 0.3612 - val_loss: 1.3179 - val_accuracy: 0.4161\n",
+      "Epoch 9/50\n",
+      "21/21 [==============================] - 2s 108ms/step - loss: 1.3162 - accuracy: 0.3612 - val_loss: 1.3157 - val_accuracy: 0.3423\n",
+      "Epoch 10/50\n",
+      "21/21 [==============================] - 3s 127ms/step - loss: 1.3124 - accuracy: 0.3590 - val_loss: 1.3022 - val_accuracy: 0.3893\n",
+      "Epoch 11/50\n",
+      "21/21 [==============================] - 3s 123ms/step - loss: 1.2921 - accuracy: 0.3739 - val_loss: 1.2917 - val_accuracy: 0.4094\n",
+      "Epoch 12/50\n",
+      "21/21 [==============================] - 3s 131ms/step - loss: 1.2840 - accuracy: 0.4052 - val_loss: 1.3190 - val_accuracy: 0.3490\n",
+      "Epoch 13/50\n",
+      "21/21 [==============================] - 2s 117ms/step - loss: 1.2746 - accuracy: 0.4104 - val_loss: 1.2730 - val_accuracy: 0.3758\n",
+      "Epoch 14/50\n",
+      "21/21 [==============================] - 2s 112ms/step - loss: 1.2670 - accuracy: 0.4045 - val_loss: 1.2830 - val_accuracy: 0.3423\n",
+      "Epoch 15/50\n",
+      "21/21 [==============================] - 3s 121ms/step - loss: 1.2651 - accuracy: 0.4134 - val_loss: 1.2728 - val_accuracy: 0.3826\n",
+      "Epoch 16/50\n",
+      "21/21 [==============================] - 2s 117ms/step - loss: 1.2908 - accuracy: 0.3925 - val_loss: 1.3272 - val_accuracy: 0.3758\n",
+      "Epoch 17/50\n",
+      "21/21 [==============================] - 2s 110ms/step - loss: 1.2400 - accuracy: 0.4590 - val_loss: 1.2627 - val_accuracy: 0.4094\n",
+      "Epoch 18/50\n",
+      "21/21 [==============================] - 2s 117ms/step - loss: 1.2309 - accuracy: 0.4403 - val_loss: 1.2629 - val_accuracy: 0.4027\n",
+      "Epoch 19/50\n",
+      "21/21 [==============================] - 3s 124ms/step - loss: 1.2261 - accuracy: 0.4500 - val_loss: 1.2685 - val_accuracy: 0.3826\n",
+      "Epoch 20/50\n",
+      "21/21 [==============================] - 3s 128ms/step - loss: 1.2076 - accuracy: 0.4843 - val_loss: 1.2881 - val_accuracy: 0.3490\n",
+      "Epoch 21/50\n",
+      "21/21 [==============================] - 2s 117ms/step - loss: 1.2100 - accuracy: 0.4619 - val_loss: 1.3091 - val_accuracy: 0.4027\n",
+      "Epoch 22/50\n",
+      "21/21 [==============================] - 3s 138ms/step - loss: 1.1931 - accuracy: 0.4724 - val_loss: 1.2391 - val_accuracy: 0.3356\n",
+      "Epoch 23/50\n",
+      "21/21 [==============================] - 3s 127ms/step - loss: 1.1622 - accuracy: 0.5030 - val_loss: 1.2549 - val_accuracy: 0.3557\n",
+      "Epoch 24/50\n",
+      "21/21 [==============================] - 3s 142ms/step - loss: 1.1527 - accuracy: 0.4933 - val_loss: 1.2365 - val_accuracy: 0.3893\n",
+      "Epoch 25/50\n",
+      "21/21 [==============================] - 2s 117ms/step - loss: 1.1406 - accuracy: 0.5127 - val_loss: 1.2334 - val_accuracy: 0.3960\n",
+      "Epoch 26/50\n",
+      "21/21 [==============================] - 2s 113ms/step - loss: 1.1392 - accuracy: 0.5075 - val_loss: 1.2264 - val_accuracy: 0.3557\n",
+      "Epoch 27/50\n",
+      "21/21 [==============================] - 3s 121ms/step - loss: 1.1533 - accuracy: 0.5142 - val_loss: 1.2324 - val_accuracy: 0.3691\n",
+      "Epoch 28/50\n",
+      "21/21 [==============================] - 3s 126ms/step - loss: 1.1132 - accuracy: 0.5142 - val_loss: 1.2592 - val_accuracy: 0.3893\n",
+      "Epoch 29/50\n",
+      "21/21 [==============================] - 2s 109ms/step - loss: 1.0984 - accuracy: 0.5269 - val_loss: 1.3592 - val_accuracy: 0.3691\n",
+      "Epoch 30/50\n",
+      "21/21 [==============================] - 3s 120ms/step - loss: 1.0971 - accuracy: 0.5269 - val_loss: 1.2404 - val_accuracy: 0.4161\n",
+      "Epoch 31/50\n",
+      "21/21 [==============================] - 3s 117ms/step - loss: 1.0854 - accuracy: 0.5545 - val_loss: 1.2136 - val_accuracy: 0.4094\n",
+      "Epoch 32/50\n",
+      "21/21 [==============================] - 3s 126ms/step - loss: 1.0753 - accuracy: 0.5634 - val_loss: 1.2144 - val_accuracy: 0.4094\n",
+      "Epoch 33/50\n",
+      "21/21 [==============================] - 3s 120ms/step - loss: 1.1017 - accuracy: 0.5410 - val_loss: 1.2663 - val_accuracy: 0.4094\n",
+      "Epoch 34/50\n",
+      "21/21 [==============================] - 2s 109ms/step - loss: 1.1065 - accuracy: 0.5313 - val_loss: 1.2539 - val_accuracy: 0.4228\n",
+      "Epoch 35/50\n",
+      "21/21 [==============================] - 3s 131ms/step - loss: 1.0985 - accuracy: 0.5358 - val_loss: 1.1788 - val_accuracy: 0.4161\n",
+      "Epoch 36/50\n",
+      "21/21 [==============================] - 3s 128ms/step - loss: 1.0371 - accuracy: 0.5828 - val_loss: 1.1870 - val_accuracy: 0.4497\n",
+      "Epoch 37/50\n",
+      "21/21 [==============================] - 2s 114ms/step - loss: 1.0420 - accuracy: 0.5634 - val_loss: 1.1762 - val_accuracy: 0.4497\n",
+      "Epoch 38/50\n",
+      "21/21 [==============================] - 2s 116ms/step - loss: 1.0329 - accuracy: 0.5724 - val_loss: 1.1875 - val_accuracy: 0.4362\n",
+      "Epoch 39/50\n",
+      "21/21 [==============================] - 3s 122ms/step - loss: 1.0094 - accuracy: 0.5657 - val_loss: 1.1816 - val_accuracy: 0.4497\n",
+      "Epoch 40/50\n",
+      "21/21 [==============================] - 3s 120ms/step - loss: 1.0010 - accuracy: 0.5933 - val_loss: 1.1913 - val_accuracy: 0.3893\n",
+      "Epoch 41/50\n",
+      "21/21 [==============================] - 2s 110ms/step - loss: 0.9829 - accuracy: 0.5970 - val_loss: 1.1568 - val_accuracy: 0.4362\n",
+      "Epoch 42/50\n",
+      "21/21 [==============================] - 3s 121ms/step - loss: 0.9698 - accuracy: 0.6097 - val_loss: 1.1310 - val_accuracy: 0.4765\n",
+      "Epoch 43/50\n",
+      "21/21 [==============================] - 2s 117ms/step - loss: 0.9549 - accuracy: 0.6201 - val_loss: 1.1496 - val_accuracy: 0.4497\n",
+      "Epoch 44/50\n",
+      "21/21 [==============================] - 3s 121ms/step - loss: 0.9356 - accuracy: 0.6358 - val_loss: 1.1369 - val_accuracy: 0.4631\n",
+      "Epoch 45/50\n",
+      "21/21 [==============================] - 3s 123ms/step - loss: 0.9206 - accuracy: 0.6396 - val_loss: 1.1106 - val_accuracy: 0.5034\n",
+      "Epoch 46/50\n",
+      "21/21 [==============================] - 2s 115ms/step - loss: 0.9296 - accuracy: 0.6336 - val_loss: 1.1942 - val_accuracy: 0.4832\n",
+      "Epoch 47/50\n",
+      "21/21 [==============================] - 2s 113ms/step - loss: 0.9588 - accuracy: 0.6149 - val_loss: 1.1034 - val_accuracy: 0.5101\n",
+      "Epoch 48/50\n",
+      "21/21 [==============================] - 3s 139ms/step - loss: 0.9080 - accuracy: 0.6336 - val_loss: 1.1239 - val_accuracy: 0.4899\n",
+      "Epoch 49/50\n",
+      "21/21 [==============================] - 3s 123ms/step - loss: 0.8882 - accuracy: 0.6560 - val_loss: 1.0938 - val_accuracy: 0.4832\n",
+      "Epoch 50/50\n",
+      "21/21 [==============================] - 3s 133ms/step - loss: 0.8692 - accuracy: 0.6582 - val_loss: 1.0814 - val_accuracy: 0.5168\n"
      ]
     }
    ],
@@ -170,32 +236,37 @@
     "LAYERS_ACTIVATION = 'relu'\n",
     "LOSS_FUNCTION = 'sparse_categorical_crossentropy'\n",
     "\n",
-    "EPOCHS = 20\n",
+    "EPOCHS = 50\n",
     "\n",
     "def get_model():\n",
     "    model = tf.keras.Sequential([\n",
-    "              tf.keras.layers.Conv2D(64, (3, 3), activation=LAYERS_ACTIVATION, padding='same'),\n",
-    "              tf.keras.layers.Conv2D(64, (3, 3), activation=LAYERS_ACTIVATION, padding='same'),\n",
-    "              tf.keras.layers.MaxPool2D((2, 2)),\n",
-    "              tf.keras.layers.Conv2D(128, (3, 3), activation=LAYERS_ACTIVATION, padding='same'),\n",
-    "              tf.keras.layers.Conv2D(128, (3, 3), activation=LAYERS_ACTIVATION, padding='same'),\n",
-    "              tf.keras.layers.MaxPool2D((2, 2)),\n",
+    "              tf.keras.layers.Conv1D(256, 11),\n",
+    "              tf.keras.layers.MaxPool1D(3),\n",
+    "              tf.keras.layers.Conv1D(128, 7),\n",
+    "              tf.keras.layers.MaxPool1D(3),\n",
+    "              tf.keras.layers.Conv1D(64, 7),\n",
     "              tf.keras.layers.Flatten(),\n",
-    "              tf.keras.layers.Dense(128, activation=LAYERS_ACTIVATION),\n",
     "              tf.keras.layers.Dense(64, activation=LAYERS_ACTIVATION),\n",
     "              tf.keras.layers.Dense(6, activation=tf.keras.activations.softmax)               \n",
     "    ])\n",
-    "    model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-3), loss=LOSS_FUNCTION, metrics=['accuracy'])\n",
+    "    model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-4), loss=LOSS_FUNCTION, metrics=['accuracy'])\n",
     "    return model\n",
     "\n",
     "model = get_model()\n",
-    "history = model.fit(mfccs, emotions, epochs=EPOCHS, batch_size=BATCH_SIZE)"
+    "history = model.fit(train_x, train_y, validation_data=(val_x, val_y), epochs=EPOCHS, batch_size=BATCH_SIZE)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +282,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
@@ -219,5 +289,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
